--- a/styles.css
+++ b/styles.css
@@ -327,8 +327,9 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 8px;
+    margin-left: 6px;
     margin-bottom: 8px;
+    margin-right: 6px;
 }
 
 .card > .row > .description {
